src/styles/main.scss
@import "../styles/variables.scss";

#app {
  font-family: Avenir, Helvetica, Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-align: center;
  color: black;
}

/* Search */
.search-results {
  z-index: 4;
  ul {
    background-color: #042541;
    padding: 20px;
    min-width: 250px;
    border-radius: 4px;
    max-height: 300px;
    overflow-y: scroll;
  }
}
.search-wrapper {
  input {
    padding-left: 40px;
    border-radius: 20px;
  }
  .close-button {
    right: 10px;
    font-size: 1.2rem;
  }
  .search-icon {
    top: 6px;
    left: 10px;
    font-size: 1.2rem;
  }
}
/* Nav */
.navbar {
  background-color: #042541;
  .navbar-inner {
    display: flex;
    justify-content: space-between;
  }
  .navbar-nav {
    .nav-link {
      color: $nav-link-color;
      font-weight: bold;
    }
    .nav-link-active {
      color: white;
    }
  }
}

.single-custom-bg {
  background-image: linear-gradient(to right, rgba(31.5, 10.5, 10.5, 1) calc((50vw - 170px) - 340px), rgba(31.5, 10.5, 10.5, 0.84) 50%, rgba(31.5, 10.5, 10.5, 0.84) 100%);
  padding-left: 40px;
  padding-right: 40px;
  min-height: calc(100vh - 60px);
  display: flex;
  align-items: center;
}
.single-container {
    background-position: left calc((50vw - 170px) - 340px) top;
    background-size: cover;
    background-repeat: no-repeat;
}


@media screen and (max-width: 780px) {
  .navbar-inner {
    flex-direction: column;
  }
  ul.navbar-nav {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 20px;
    margin: 0;
  }
}
.companies-list {
  margin-top: 10px;
  display: flex;
  align-items: center;
  gap: 30px;
  li {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    img {
      max-width: 100px;
      max-height: 70px;
    }
  }
}

/* Detail */
.movie-poster-field {
  .vote-average {
    bottom: -26px;
    left: 26px;
  }
}

.stat-circle {
  .circle-bg {
    fill: none;
    stroke: #f1f1f1;
    stroke-width: 2;
  }
  .circle-progress
  {
    fill: none;
    stroke: #333;
    stroke-width: 2;
    stroke-dasharray: 51 51;
    stroke-dashoffset: -51;
    stroke-linecap: round;
    &.progress-green {
      stroke: #2ecc71;
    }
    &.progress-yellow {
      stroke: #ffca2c;
    }
  }
  .circle-middle {
    fill: #333;
  }
  .circle-text
  {
    text-anchor: middle;
    fill: #fff;
  }
  .percentage-text {
    font-size: 7px;
  }
  .percentage-symbol {
    font-size: 3px; 
  }
}

/* Common */
.vote-average {
  width: 60px;
  height: 60px;
  border-radius: 40px;
 // background: #333;
  color: white;
  font-weight: bold;
  display: flex;
  align-items: center;
  justify-content: center;
}
.card.movie-card {
  &.movie-card {
    border: 0;
    .movie-action {
      position: relative;
    }
    .vote-average {
      position: absolute;
      bottom: -26px;
      left: 10px;
    }
    .movie-title {
      font-weight: bold;
    }
  }
}

.loading-container {
  flex: 1; 
  display: flex;
  align-items: center;
  justify-content: center;
}

.page-container {
  display: flex;
  flex-direction: column;
  min-height: calc(100vh - 60px);
}

.movie-poster {
  max-width: 100%;
}
.add-favorite {
  position: absolute;
  right: 20px;
  top: 10px;
  z-index: 3;
  cursor: pointer;
}
.add-favorite {
  color: #ebebeb;
  font-size: 1.4rem;
}
.add-favorite.favorite {
  color: #FF3040;
  font-size: 1.4rem;
}
.card.movie-card .card-body {
  margin-top: 10px;
  text-align: left;
}
.movie-item-wrapper {
  text-decoration: none;
}
.movie-poster {
  border-radius: 8px;
}
.movie-item {
  position: relative;
}

